# crtcli

./: .gitignore  .null-ls_694614_README.md  Cargo.toml  README.md
certs/: entity.key  entity.pem  entitycsr.pem  rootca.key  rootca.pem  server.key  server.pem  servercrs.pem
certs/certs/: rootca.key  rootca.pem
src/: args.rs  ca_cert.rs  clap.rs  cli.rs  entity.rs  main.rs  server_cert.rs
src/api/: dsh_api.rs  mod.rs
