[package]
name = "crtcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


reqwest = { version = "0.11.20", features = ["blocking", "json"] }
time = "0.3.28"
tracing = "0.1"
tracing-subscriber = "0.3.17"
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
pem = "3.0.2"
rcgen = { version = "0.11.1", features = ["pem", "x509-parser"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"] }
x509-parser = "0.15.1"
clap = { version = "4", features = ["derive"] }
serde = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.48"
openssl = { version = "0.10.57" }
# anyhow = "1.0.75"
color-eyre = "0.6.2"
picky = { version = "7.0.0-rc.8", default-features = false, features = [
	"x509",
] }
